--- a/client/src/css/modules/_filter.pcss
+++ b/client/src/css/modules/_filter.pcss
@@ -54,12 +54,12 @@
   }
   &-check {
     @mixin atSmall {
-      padding: 1.5px 1.5px 1.5px 15px;
+      padding: 1px 1px 1px 5px;
     }
   }
   &-label {
     @mixin atSmall {
-      padding: 1.5px 1.5px 1.5px 5px;
+      padding: 1px 1px 1px 5px;
     }
   }
   &--hide {
